# scanner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.sh  model_total.py  pyproject.toml  pytest.ini  requirements.txt  test.py  test.sh  test_model.tgz  test_model_modified.tgz
.github/workflows/: sync-to-azure.yml
app/: main.py  models.py
app/routes/: static_scan.py  trivy.py
app/static_scan/: common.py  exceptions.py  file_extensions.py  static_scan_controller.py  static_scanner.py
app/static_scan/classifiers/: license_classifier.py
app/static_scan/scanners/: fickling_scanner.py  modelaudit_scanner.py  modelscan_scanner.py  (+3 more)
app/tasks/: tasks.py
models/Scraps/: output.json
models/totally_safe_model/: MLmodel  conda.yaml  python_model.pkl  requirements.txt
src/: main.py  models.py
src/clients/: minio_client.py
src/routes/: static_scan.py  trivy.py
src/static_scan/: common.py  file_extensions.py  scanner_manager.py  static_scan_controller.py  static_scanner.py
src/tasks/: tasks.py
templates/: scan_report.html
test_model/__bundle__/: requirements.txt
test_model_modified/__bundle__/: handler.py
tests/: conftest.py  test_integration.py
tests/fixtures/: __init__.py  generate_test_fixtures.py  malicious_pickles.py
tests/integration/: test_end_to_end.py  test_integration.py  test_ml_formats_integration.py  test_scanners_integration.py
tests/unit/: test_fickling_scanner.py  test_model_audit_scanner.py  test_modelscan_scanner.py  test_picklescan_scanner.py  test_pypi_license_scanner.py  test_scanner_modes.py  test_trivy_scanner.py  test_validator.py
tests/utils/: helpers.py
(+35 files in other folders)
