[tool.poetry]
name = "modeltotal"
version = "0.1.0"
description = "Comprehensive security scanning platform for ML models"
authors = ["Kinetis"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Core API dependencies - use ~ for patch updates only
fastapi = "~0.117.1"
pydantic = "~2.11.9"
uvicorn = "~0.37.0"
httpx = "~0.28.1"
# Core infrastructure - use ~ for patch updates only
celery = {extras = ["pymongo", "redis"], version = "~5.5.3"}
pymongo = "~4.15.1"
redis = "5.2.0"
boto3 = "^1.34.0"
python-multipart = "~0.0.20"
# Security scanners - pin exact versions for consistency
modelscan = {extras = ["tensorflow", "h5py"], version = "0.8.7"}
picklescan = "0.0.31"
fickling = {extras = ["torch"], version = "0.1.4"}
modelaudit = {extras = ["all"], version = "0.2.6"}
# ML frameworks - use ~ for patch updates
tensorflow = "~2.20.0"
torch = "~2.8.0"
h5py = "~3.14.0"
mlflow = "~3.4.0"
onnx = "~1.19.0"
ml-dtypes = "~0.5.3"
# Utilities - use ^ for more flexibility
aiohttp = "^3.12.0"
requests = "^2.32.0"
jinja2 = "^3.1.6"
joblib = "^1.4.2"
dill = "^0.3.9"
cloudpickle = "^3.1.0"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"

[tool.poetry.group.dev.dependencies]
# Testing tools - use ~ for stability
pytest = "~8.4.2"
pytest-asyncio = "~1.2.0"
pytest-cov = "~7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"